--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -22,6 +22,10 @@ public without sharing class RollupCalcItemReplacer {
     return this.processedMetadata.containsAll(metas) && this.calcItemHashCodes.contains(calcItems?.hashCode());
   }
 
+  public void resetShouldRunAs(String shouldRunAsValue) {
+    this.control.ShouldRunAs__c = shouldRunAsValue;
+  }
+
   public List<SObject> replace(List<SObject> calcItems, List<Rollup__mdt> metadata) {
     Boolean shouldRunSync = this.control?.ReplaceCalcItemsAsyncWhenOverCount__c >= calcItems?.size();
     Boolean mightNeedReplacement = this.setupRequiresReplacement(calcItems, metadata);
@@ -36,11 +40,11 @@ public without sharing class RollupCalcItemReplacer {
       System.isQueueable() == false
     ) {
       return calcItems;
-    } else if (mightNeedReplacement && calcItems.isEmpty() == false) {
+    } else if (mightNeedReplacement && calcItems?.isEmpty() == false) {
       this.calcItemHashCodes.add(calcItems.hashCode());
       this.processedMetadata.addAll(metadata);
       calcItems = this.potentiallyReplacePolymorphicWhereClauses(calcItems);
-      return this.replaceCalcItemsWithParentWhereClauses(calcItems);
+      this.replaceCalcItemsWithParentWhereClauses(calcItems);
     } else if (mightNeedReplacement == false) {
       this.processedMetadata.addAll(metadata);
     }
@@ -56,7 +60,11 @@ public without sharing class RollupCalcItemReplacer {
         localNeedsReplacement = true;
         RollupEvaluator.WhereFieldEvaluator whereEval = RollupEvaluator.getWhereEval(meta.CalcItemWhereClause__c, calcItems[0].getSObjectType());
         this.metaToEval.put(meta, whereEval);
-        this.queryFields.addAll(whereEval.getQueryFields());
+        for (String queryField : whereEval.getQueryFields()) {
+          if (queryField.contains('.')) {
+            this.queryFields.add(queryField);
+          }
+        }
       } else if (isPresentInMapAlready) {
         localNeedsReplacement = true;
       }
@@ -71,6 +79,7 @@ public without sharing class RollupCalcItemReplacer {
     return calcItems;
   }
 
+  @SuppressWarnings('PMD.UnusedLocalVariable')
   private List<SObject> replaceCalcItemsWithPolymorphicWhereClauses(List<SObject> calcItems, Rollup__mdt metadata) {
     final String typeField = '.Type';
     final String owner = 'Owner.';
@@ -91,19 +100,24 @@ public without sharing class RollupCalcItemReplacer {
 
     // the calc item where clause contains at least one polymorphic field, but before re-querying we validate whether or not the fields are already provided
     Map<String, Object> populatedFields = firstItem.getPopulatedFieldsAsMap();
-    Set<String> additionalQueryFields = new Set<String>();
     List<String> optionalWhereClauses = new List<String>();
+    Set<String> additionalQueryFields = new Set<String>();
+    RollupEvaluator.WhereFieldEvaluator eval = this.metaToEval.get(metadata);
+    this.processWhereClauseForDownstreamEvals(optionalWhereClauses, additionalQueryFields, sObjectType, typeField, owner, metadata, eval);
 
-    this.processWhereClauseForDownstreamEvals(optionalWhereClauses, additionalQueryFields, sObjectType, typeField, owner, metadata);
+    Boolean hasOwnerPrepolulated = populatedFields.containsKey('Owner');
+    Boolean hasTypePrepopulated = populatedFields.containsKey('Type');
 
     if (optionalWhereClauses.isEmpty()) {
       return calcItems;
+    } else if (hasOwnerClause && hasOwnerPrepolulated && hasTypeClause == false) {
+      return calcItems;
+    } else if (hasTypeClause && hasTypePrepopulated && hasOwnerClause == false) {
+      return calcItems;
+    } else if (hasTypeClause && hasTypePrepopulated && hasOwnerClause && hasOwnerPrepolulated) {
+      return calcItems;
     }
 
-    // we have to manually iterate through these fields because the "fieldMap" keySet is all in lowercase because it's ... special
-    // and only responds properly to proper-cased fields when you call the map "containsKey" method - if the field names in the keySet were
-    // proper-cased, we could just call additionalQueryFields.addAll(populatedFields.keySet().removeAll(fieldMap.keySet())) - alas
-    // this awesome one-liner doesn't work for us
     for (String fieldName : populatedFields.keySet()) {
       if (fieldMap.containsKey(fieldName)) {
         additionalQueryFields.add(fieldName);
@@ -117,14 +131,11 @@ public without sharing class RollupCalcItemReplacer {
       '=',
       String.join(optionalWhereClauses, ' AND ')
     );
-    List<String> objIds = new List<String>();
-    for (SObject record : calcItems) {
-      if (String.isNotBlank(record.Id)) {
-        objIds.add(record.Id);
-      }
-    }
+    List<SObject> objIds = calcItems; // for bind variable
+
     RollupLogger.Instance.log('replacing calc items with polymorphic where clause using query string:', queryString, LoggingLevel.FINE);
-    return Database.query(queryString);
+    calcItems = Database.query(queryString);
+    return calcItems;
   }
 
   private void processWhereClauseForDownstreamEvals(
@@ -133,16 +144,16 @@ public without sharing class RollupCalcItemReplacer {
     SObjectType sObjectType,
     String typeField,
     String owner,
-    Rollup__mdt metadata
+    Rollup__mdt metadata,
+    RollupEvaluator.WhereFieldEvaluator whereEval
   ) {
-    RollupEvaluator.WhereFieldEvaluator whereEval = this.metaToEval.get(metadata);
     for (String whereClause : whereEval.getWhereClauses()) {
       if (whereClause.contains(typeField) || whereClause.contains(owner)) {
+        // "consume" the metadata where clause for downstream evaluators
         List<String> splitWheres = whereClause.split(' ');
         if (splitWheres.size() > 0) {
           additionalQueryFields.add(splitWheres[0]);
         }
-        // "consume" the metadata where clause for downstream evaluators
         metadata.CalcItemWhereClause__c = metadata.CalcItemWhereClause__c.replace(whereClause, '');
         optionalWhereClauses.add(whereClause);
       }
@@ -150,9 +161,9 @@ public without sharing class RollupCalcItemReplacer {
   }
 
   @SuppressWarnings('PMD.UnusedLocalVariable')
-  private List<SObject> replaceCalcItemsWithParentWhereClauses(List<SObject> calcItems) {
+  private void replaceCalcItemsWithParentWhereClauses(List<SObject> calcItems) {
     if (calcItems.isEmpty()) {
-      return calcItems;
+      return;
     }
     SObjectType calcItemType = calcItems[0].getSObjectType();
     Map<String, SObjectField> fieldNameToToken = calcItemType.getDescribe().fields.getMap();
@@ -160,35 +171,29 @@ public without sharing class RollupCalcItemReplacer {
     for (String queryField : this.queryFields) {
       String fieldPart = queryField.substringBefore('.');
       String fieldName = this.getFullyQualifiedFieldName(fieldPart);
-      if (
-        queryField.contains('.') &&
-        fieldNameToToken.containsKey(fieldName) &&
-        fieldNameToToken.get(fieldName).getDescribe().isNamePointing() == false &&
-        this.hasParentField(calcItems[0], fieldNameToToken, queryField) == false
-      ) {
+      if (this.isParentFieldAlreadyPopulated(fieldNameToToken, fieldName, queryField, calcItems[0]) == false) {
         hasUnqueriedParentFields = true;
         break;
       }
     }
 
     if (hasUnqueriedParentFields) {
-      for (String populatedFieldName : calcItems[0].getPopulatedFieldsAsMap().keySet()) {
-        if (fieldNameToToken.containsKey(populatedFieldName)) {
-          this.queryFields.add(populatedFieldName);
-        }
-      }
       List<SObject> objIds = calcItems; // for bind variable
       String queryString = RollupQueryBuilder.Current.getQuery(calcItemType, new List<String>(this.queryFields), 'Id', '=');
       RollupLogger.Instance.log('replacing calc items with parent-level where clause using query string:', queryString, LoggingLevel.FINE);
-      Map<Id, SObject> idToCalcItems = new Map<Id, SObject>(calcItems);
-      calcItems = Database.query(queryString);
-      this.restorePriorFields(calcItems, idToCalcItems);
+      Map<Id, SObject> idToCalcItemsWithParentFields = new Map<Id, SObject>(Database.query(queryString));
+      this.appendUpdatedParentFields(calcItems, idToCalcItemsWithParentFields);
     }
-    return calcItems;
   }
 
   private String getFullyQualifiedFieldName(String fieldPart) {
     return fieldPart.endsWith('__r') ? fieldPart.removeEnd('__r') + '__c' : fieldPart + 'Id';
+  }
+
+  private Boolean isParentFieldAlreadyPopulated(Map<String, SObjectField> fieldNameToToken, String fieldName, String fieldPath, SObject firstRecord) {
+    return fieldNameToToken.containsKey(fieldName) &&
+      fieldNameToToken.get(fieldName).getDescribe().isNamePointing() == false &&
+      this.hasParentField(firstRecord, fieldNameToToken, fieldPath);
   }
 
   private Boolean hasParentField(SObject record, Map<String, Schema.SObjectField> fieldNameToToken, String fieldPath) {
@@ -198,7 +203,7 @@ public without sharing class RollupCalcItemReplacer {
         String fieldPart = splitParts.remove(0);
         String field = this.getFullyQualifiedFieldName(fieldPart);
         Schema.SObjectField fieldToken = fieldNameToToken.get(field);
-        if (fieldToken.getDescribe().getReferenceTo().isEmpty() == false) {
+        if (fieldToken.getDescribe().getReferenceTo()?.isEmpty() == false) {
           SObject parentRecord = record.getSObject(fieldPart);
           if (parentRecord == null) {
             return false;
@@ -215,14 +220,16 @@ public without sharing class RollupCalcItemReplacer {
     }
   }
 
-  private void restorePriorFields(List<SObject> calcItems, Map<Id, SObject> idToPriorCalcItems) {
+  private void appendUpdatedParentFields(List<SObject> calcItems, Map<Id, SObject> idToCalcItemsWithParentFields) {
     Map<String, SObjectField> fieldNameToFieldToken = calcItems[0].getSObjectType().getDescribe().fields.getMap();
     for (SObject calcItem : calcItems) {
-      SObject priorCalcItem = idToPriorCalcItems.get(calcItem.Id);
-      Set<String> populatedFieldsKeys = calcItem.getPopulatedFieldsAsMap().keySet();
-      for (String field : this.queryFields) {
-        if (populatedFieldsKeys.contains(field) && fieldNameToFieldToken.containsKey(field) && fieldNameToFieldToken.get(field).getDescribe().isUpdateable()) {
-          calcItem.put(field, priorCalcItem.get(field));
+      SObject calcItemWIthUpdatedParentField = idToCalcItemsWithParentFields.get(calcItem.Id);
+      for (String fieldName : calcItemWIthUpdatedParentField.getPopulatedFieldsAsMap().keySet()) {
+        if (fieldNameToFieldToken.containsKey(fieldName)) {
+          DescribeFieldResult fieldToken = fieldNameToFieldToken.get(fieldName).getDescribe();
+          if (fieldToken.getReferenceTo().isEmpty() == false && fieldToken.isNamePointing() == false && fieldToken.getName() != 'Id') {
+            calcItem.putSObject(fieldToken.getRelationshipName(), calcItemWIthUpdatedParentField.getSObject(fieldToken.getRelationshipName()));
+          }
         }
       }
     }
