--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -4,7 +4,7 @@ private class RollupCalculatorTests {
 
   @TestSetup
   static void setup() {
-    insert new Account(Name = 'RollupCalculatorTests');
+    insert new Account(Name = RollupCalculatorTests.class.getName());
   }
 
   /** FIRST / LAST operations */
@@ -504,6 +504,28 @@ private class RollupCalculatorTests {
   }
 
   @IsTest
+  static void shouldNotDoubleCountDistinctForDeletions() {
+    Account acc = [SELECT Id FROM Account];
+    insert new Contact(LastName = 'Count Distinct', AccountId = acc.Id);
+
+    RollupCalculator calc = RollupCalculator.Factory.getCalculator(
+      3,
+      Rollup.Op.DELETE_COUNT_DISTINCT,
+      Contact.Id,
+      Account.AnnualRevenue,
+      new Rollup__mdt(CalcItem__c = 'Contact'),
+      acc.Id,
+      Contact.AccountId
+    );
+    calc.performRollup(
+      new List<SObject>{ new Contact(Id = RollupTestUtils.createId(Contact.SObjectType)), new Contact(Id = RollupTestUtils.createId(Contact.SObjectType)) },
+      new Map<Id, SObject>()
+    );
+
+    System.assertEquals(1, calc.getReturnValue(), 'Should not double count any deleted items');
+  }
+
+  @IsTest
   static void shouldReturnCountIfRollupValueUnchangedButEvalStatusHas() {
     RollupCalculator calc = RollupCalculator.Factory.getCalculator(
       0,
@@ -939,7 +961,7 @@ private class RollupCalculatorTests {
   static void shouldInvokeNoOpMethodsWithoutFail() {
     RollupCalculator calc = new RollupCalcEmptyMock();
     calc.handleCountDistinct(null);
-    calc.handleUpdateCountDistinct(null, null);
+    calc.handleUpdateCountDistinct(null);
     calc.handleSumOrCount(null);
     calc.handleUpdateSumOrCount(null, null);
     calc.handleDeleteSumOrCount(null);
